<resources>
    <string name="app_name">Populair Movies</string>
    <string name="text_movie">"The most populair movies of "</string>
    <string name="year">year</string>
    <string name="submit">submit</string>
    <string name="movie">movie</string>
    <string name="number">%d.</string>
    <string name="overview">Overview</string>
    <string name="star">Star</string>
    <string name="release_date">Release: %s</string>
</resources>
